--- a/api/package.json
+++ b/api/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "monitor-service",
+  "name": "febo-api",
   "version": "1.0.0",
-  "description": "Tickets Monitor Service",
-  "main": "src/server.ts",
+  "description": "Febo API",
+  "main": "src/index.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node ./src/server.ts",
-    "start": "nodemon ./dist/server.js",
+    "dev": "ts-node ./src/index.ts",
+    "start": "nodemon ./dist/index.js",
     "prod": "npm run build && npm run server-restart",
-    "server-restart": "forever stopall && NODE_ENV=production forever start ./dist/server.js",
-    "nodemon": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts"
+    "server-restart": "forever stopall && NODE_ENV=production forever start ./dist/index.js",
+    "nodemon": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts"
   },
   "author": "Leonardo Rodrigues de Carvalho Vargas",
   "license": "ISC",
@@ -26,8 +26,9 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "nodemon": "^1.18.4",
-    "ts-node": "^7.0.1",
-    "typescript": "^3.1.3"
+    "ts-node": "^7.0.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "typescript": "^3.1.3"
+  }
 }
