--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,17 +1,22 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "moduleResolution": "node",
-        "pretty": true,
-        "sourceMap": true,
         "target": "es6",
-        "outDir": "./dist",
-        "baseUrl": "./lib"
+        "moduleResolution": "node",
+        "sourceMap": true,
+        "outDir": "dist",
+        "baseUrl": ".",
+        "paths": {
+            "*": [
+                "node_modules/*",
+                "src/types/*"
+            ]
+        },
+        "lib": [
+            "es2015"
+        ]
     },
     "include": [
-        "src/**/*.ts"
-    ],
-    "exclude": [
-        "node_modules"
+        "src/**/*"
     ]
 }
