--- a/api/package.json
+++ b/api/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "ts-node ./src/index.ts",
-    "start": "nodemon ./dist/index.js",
-    "prod": "npm run build && npm run server-restart",
-    "server-restart": "forever stopall && NODE_ENV=production forever start ./dist/index.js",
+    "start": "node ./dist/index.js",
     "nodemon": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts"
   },
   "author": "Leonardo Rodrigues de Carvalho Vargas",
